# scap

./: .all-contributorsrc  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  release-plz.toml
.github/: FUNDING.yml
.github/workflows/: initiateRelease.yml
acap/: Cargo.toml
acap/src/: lib.rs  main.rs
acap/src/capturer/: mod.rs
acap/src/device/: mod.rs
acap/src/device/microphone/: mod.rs
acap/src/frame/: mod.rs
examples/: main.rs  screenshots.rs
scap/: CHANGELOG.md  Cargo.toml
scap/src/: lib.rs  main.rs
scap/src/capturer/: mod.rs
scap/src/capturer/engine/: mod.rs
scap/src/capturer/engine/linux/: error.rs  mod.rs  portal.rs
scap/src/capturer/engine/mac/: mod.rs
scap/src/capturer/engine/win/: mod.rs
scap/src/device/: mod.rs
scap/src/device/display/: mod.rs
scap/src/device/display/mac/: mod.rs
scap/src/device/display/win/: mod.rs
scap/src/frame/: mod.rs
src/: audio.rs  lib.rs  lib_bckup.rs  main.rs
src/capturer/: mod.rs
src/capturer/engine/: mod.rs
src/capturer/engine/linux/: error.rs  ioctl.rs  mod.rs  portal.rs
src/capturer/engine/linux/pw/: mod.rs  portal.rs
src/capturer/engine/linux/wayland/: mod.rs
src/capturer/engine/linux/x11/: mod.rs
src/capturer/engine/mac/: apple_sys.rs  ext.rs  mod.rs  pixel_buffer.rs  pixelformat.rs
src/capturer/engine/win/: mod.rs
src/device/: display.rs  mod.rs
src/device/display/: mod.rs
src/device/display/linux/: mod.rs
src/device/display/mac/: mod.rs
src/device/display/win/: mod.rs
src/encoder/: config.rs  encoder.rs  frame_pool.rs  mod.rs  utils.rs
src/frame/: audio.rs  mod.rs  video.rs
src/mac/: Package.swift  audio.rs  mod.rs  temp.rs  test.rs
src/mac/Sources/mac/: mac.swift
src/output/: mod.rs
src/targets/: mod.rs
src/targets/linux/: mod.rs
src/targets/mac/: mod.rs
src/targets/win/: mod.rs
src/utils/: mod.rs
src/utils/linux/: mod.rs
src/utils/mac/: mod.rs
src/utils/win/: mod.rs
src/win/: example.rs  mod.rs
src/windows/: mod.rs
