[package]
name = "scap"
description = "Modern, high-performance screen capture library for Rust. Cross-platform."
version = "0.1.0-beta.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = [
	"Siddharth <siddharth99c@gmail.com>",
	"Pranav <pranav2000joglekar@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/helmerapp/scap"
documentation = "https://docs.rs/scap"
keywords = ["screen", "recording", "video", "capture", "media"]
categories = ["graphics", "multimedia", "multimedia::video"]

[dependencies]
futures = "0.3.31"
sysinfo = "0.30.0"
thiserror = "2.0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.5.0"
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_UI_HiDpi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Performance",
] }
cpal = "0.15.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics-helmer-fork = "0.24.0"
cocoa = "0.25.0"
objc = "0.2.7"
cidre = { version = "0.10.1", default-features = false, features = [
	"async",
	"av",
	"sc",
	"dispatch",
	"macos_13_0",
] }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.8.0"
dbus = "0.9.7"
rand = "0.8.5"
