[package]
name = "scap"
description = "Modern, high-performance screen capture library for Rust. Cross-platform."
version = "0.0.3"
edition = "2021"
rust-version = "1.71"
license = "MIT"
authors = ["Siddharth <siddharth99c@gmail.com>", "Pranav <pranav2000joglekar@gmail.com>"]
readme = "README.md"
repository = "https://github.com/clearlysid/scap"
documentation = "https://docs.rs/scap"
keywords = ["screen", "recording", "video", "audio", "capture", "media"]
categories = ["graphics", "multimedia", "multimedia::video"]

[dependencies]
cpal = "0.15.2"
hound = "3.5.1"
sysinfo = "0.30.0"
bytes = "1.5.0"
itertools = "0.12.0"
image = "0.24.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1.0.59"
windows = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
tao-core-video-sys = "0.2.0"
core-graphics = "0.23.1"
screencapturekit = "0.2.3"
screencapturekit-sys = "0.2.3"
apple-sys = { version = "0.2.0", features = ["CoreMedia", "ScreenCaptureKit"] }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.7.2"
dbus = "0.9.7"
rand = "0.8.5"
